; ModuleID = '/home/carl/AnghaBench/systemd/src/core/extr_dbus-cgroup.c_property_get_delegate_controllers.c'
source_filename = "/home/carl/AnghaBench/systemd/src/core/extr_dbus-cgroup.c_property_get_delegate_controllers.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { i32, i32 }

@.str = private unnamed_addr constant [3 x i8] c"as\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_10__*, i8*, i8*, i8*, %struct.TYPE_10__*, i8*, i32*)* @property_get_delegate_controllers to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @property_get_delegate_controllers(%struct.TYPE_10__* %0, i8* %1, i8* %2, i8* %3, %struct.TYPE_10__* %4, i8* %5, i32* %6) #0 {
  %8 = alloca i32, align 4
  %9 = alloca %struct.TYPE_10__*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i8*, align 8
  %13 = alloca %struct.TYPE_10__*, align 8
  %14 = alloca i8*, align 8
  %15 = alloca i32*, align 8
  %16 = alloca %struct.TYPE_10__*, align 8
  store %struct.TYPE_10__* %0, %struct.TYPE_10__** %9, align 8
  store i8* %1, i8** %10, align 8
  store i8* %2, i8** %11, align 8
  store i8* %3, i8** %12, align 8
  store %struct.TYPE_10__* %4, %struct.TYPE_10__** %13, align 8
  store i8* %5, i8** %14, align 8
  store i32* %6, i32** %15, align 8
  %17 = load i8*, i8** %14, align 8
  %18 = bitcast i8* %17 to %struct.TYPE_10__*
  store %struct.TYPE_10__* %18, %struct.TYPE_10__** %16, align 8
  %19 = load %struct.TYPE_10__*, %struct.TYPE_10__** %9, align 8
  %20 = call i32 @assert(%struct.TYPE_10__* %19)
  %21 = load %struct.TYPE_10__*, %struct.TYPE_10__** %13, align 8
  %22 = call i32 @assert(%struct.TYPE_10__* %21)
  %23 = load %struct.TYPE_10__*, %struct.TYPE_10__** %16, align 8
  %24 = call i32 @assert(%struct.TYPE_10__* %23)
  %25 = load %struct.TYPE_10__*, %struct.TYPE_10__** %16, align 8
  %26 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %25, i32 0, i32 1
  %27 = load i32, i32* %26, align 4
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %32, label %29

29:                                               ; preds = %7
  %30 = load %struct.TYPE_10__*, %struct.TYPE_10__** %13, align 8
  %31 = call i32 @sd_bus_message_append(%struct.TYPE_10__* %30, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i32 0)
  store i32 %31, i32* %8, align 4
  br label %42

32:                                               ; preds = %7
  %33 = load %struct.TYPE_10__*, %struct.TYPE_10__** %9, align 8
  %34 = load i8*, i8** %10, align 8
  %35 = load i8*, i8** %11, align 8
  %36 = load i8*, i8** %12, align 8
  %37 = load %struct.TYPE_10__*, %struct.TYPE_10__** %13, align 8
  %38 = load %struct.TYPE_10__*, %struct.TYPE_10__** %16, align 8
  %39 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %38, i32 0, i32 0
  %40 = load i32*, i32** %15, align 8
  %41 = call i32 @property_get_cgroup_mask(%struct.TYPE_10__* %33, i8* %34, i8* %35, i8* %36, %struct.TYPE_10__* %37, i32* %39, i32* %40)
  store i32 %41, i32* %8, align 4
  br label %42

42:                                               ; preds = %32, %29
  %43 = load i32, i32* %8, align 4
  ret i32 %43
}

declare dso_local i32 @assert(%struct.TYPE_10__*) #1

declare dso_local i32 @sd_bus_message_append(%struct.TYPE_10__*, i8*, i32) #1

declare dso_local i32 @property_get_cgroup_mask(%struct.TYPE_10__*, i8*, i8*, i8*, %struct.TYPE_10__*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
